--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -43,7 +43,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Started in position:  (42871, 21953)\n"
+      "Started in position:  (30004, 29563)\n"
      ]
     }
    ],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "00fae8a9-73a9-4f7c-9061-763ccc5b26db",
    "metadata": {},
    "outputs": [
@@ -115,16 +115,19 @@
        "  )\n",
        "  (latent_space): Sequential(\n",
        "    (0): Linear(in_features=626720, out_features=1024, bias=True)\n",
-       "    (1): ReLU()\n",
-       "    (2): Linear(in_features=1024, out_features=128, bias=True)\n",
-       "    (3): ReLU()\n",
+       "    (1): LeakyReLU(negative_slope=0.01)\n",
+       "    (2): BatchNorm1d(1024, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    (3): Linear(in_features=1024, out_features=128, bias=True)\n",
+       "    (4): LeakyReLU(negative_slope=0.01)\n",
+       "    (5): BatchNorm1d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
        "  )\n",
        "  (attention): Sequential(\n",
        "    (0): Linear(in_features=128, out_features=128, bias=True)\n",
        "    (1): Tanh()\n",
        "    (2): Linear(in_features=128, out_features=128, bias=True)\n",
+       "    (3): Softmax(dim=1)\n",
        "  )\n",
-       "  (lstm): LSTM(128, 64, num_layers=2, batch_first=True)\n",
+       "  (lstm): LSTM(128, 64, num_layers=2, batch_first=True, dropout=0.5)\n",
        "  (action_effect_fc): Sequential(\n",
        "    (0): Linear(in_features=64, out_features=32, bias=True)\n",
        "    (1): ReLU()\n",
@@ -133,7 +136,7 @@
        ")"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +145,7 @@
     "strategy = DeterministicStrategy()\n",
     "agent = Agent(strategy, 6, device)\n",
     "policy_net = CNN_LSTM(patch_size, thumbnail_size, num_actions).to(device)\n",
-    "policy_net.load_state_dict(torch.load(\"../DQN_b64_m2500_pS(128, 128)_thS(512, 512)_target_net_Jan_14_24 13:25.pt\"))\n",
+    "# policy_net.load_state_dict(torch.load(\"../DQN_b64_m2500_pS(128, 128)_thS(512, 512)_target_net_Jan_14_24 13:25.pt\"))\n",
     "policy_net.eval()"
    ]
   },
@@ -176,7 +179,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
+   "id": "6eaa2c6f-c283-4a25-ab01-a69233bce92b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0, 0, 0, 0]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.tensor([[0] * 4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "53eacd2e-994d-47a4-ba3a-5e8f486c7289",
    "metadata": {},
    "outputs": [
@@ -184,13 +208,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[-5.9220, -6.1816, -5.7517, -5.7562, -5.9765, -5.8443]])\n"
+      "tensor([[-0.0539, -0.0056, -0.0150,  0.0139,  0.1149, -0.0139],\n",
+      "        [-0.0501, -0.0080, -0.0161,  0.0170,  0.1122, -0.0110],\n",
+      "        [-0.0468, -0.0105, -0.0168,  0.0173,  0.1109, -0.0099],\n",
+      "        [-0.0449, -0.0120, -0.0173,  0.0171,  0.1104, -0.0093]])\n"
      ]
     }
    ],
    "source": [
     "with torch.no_grad():\n",
-    "    out = policy_net.forward(torch.randn(1,3,128,128), torch.randn(1,3,512, 512), torch.tensor([[0,1,1,0]]), torch.randn(1, 2) * 100, torch.randn(1, 4) * 100)\n",
+    "    out = policy_net.forward(torch.randn(4,3,128,128), torch.randn(4,3,512, 512), torch.tensor([[0] * 4]*4), torch.randn(4, 2) * 100, torch.randn(4, 4) * 100)\n",
     "    print(out)"
    ]
   },
